[package]
name = "kv-hal-sled"
version = "0.1.0"
authors = ["luo4lu <luo4lu@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv-hal = { git = "https://github.com/Yinet-project/kv-hal" }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
bytes = "0.5.4"
async-trait = "0.1"
sled = "0.30.3"
# bytes_hex = { path = "bytes_hex" }

[dev-dependencies]
serde_json = "1.0"
tiny-keccak = { version = "2.0.0", features = ["sha3"] }


[dev-dependencies.async-std]
version = "1.0.0"
features = ["attributes"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]
